--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "graphql": "^0.6.1",
+    "graphql-redis-subscriptions": "^1.0.1",
     "graphql-subscriptions": "^0.1.0",
     "graphql-tools": "^0.6.2",
     "knex": "^0.11.3",
